// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Productimage debe mostrar el componente correctamente, con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Productimage debe mostrar el componente correctamente, con la imagen personalizada 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="https://custom-imagen.jpg"
  />
</div>
`;
